--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -91,7 +91,7 @@
                     <p>Technologie</p>
                 </div>
                 <div>
-                    <a href="#target">
+                    <a href="#marchés">
                         <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_24_108)">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -206,7 +206,7 @@
 
 <div class="content">
     <div class="container">
-        <div class="card">
+        <div class="card" id="card">
             <div class="slide slide1">
                 <div class="content">
                     <div class="titre">
@@ -214,6 +214,7 @@
                     </div>
 
                     <div class="icon">
+                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
                         <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
                     </div>
                 </div>
@@ -227,7 +228,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="card">
             <div class="slide slide1">
                 <div class="content">
                     <div class="titre">
@@ -235,7 +236,7 @@
                     </div>
 
                     <div class="icon">
-                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
                     </div>
                 </div>
             </div>
@@ -250,7 +251,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="card">
             <div class="slide slide1">
                 <div class="content">
                     <div class="titre">
@@ -258,7 +259,7 @@
                     </div>
 
                     <div class="icon">
-                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
                     </div>
                 </div>
             </div>
@@ -273,7 +274,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="card">
             <div class="slide slide1">
                 <div class="content">
                     <div class="titre">
@@ -281,7 +282,7 @@
                     </div>
 
                     <div class="icon">
-                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
                     </div>
                 </div>
             </div>
@@ -296,7 +297,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" id="card">
             <div class="slide slide1">
                 <div class="content">
                     <div class="titre">
@@ -304,7 +305,7 @@
                     </div>
 
                     <div class="icon">
-                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
                     </div>
                 </div>
             </div>
@@ -317,9 +318,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
 </div>
 
 
@@ -509,6 +508,8 @@
                 event.stopPropagation();
             });
         });
+
+
     </script>
 </body>
 
