--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -16,7 +16,7 @@
                 <span></span>
             </div>
             <div class="logo">
-                <a href="#home" class="js-scrollTo"><img src="./assets/img/logo_luxantinnovation.svg"
+                <a href="#home" class="js-scrollTo"><img src="./assets/img/logo_mila_1.svg"
                         alt="Logo Mila"></a>
             </div>
             <div class="menu">
@@ -204,122 +204,209 @@
             </article>
         </div> -->
 
-<div class="content">
-    <div class="container">
-        <div class="card" id="card">
-            <div class="slide slide1">
-                <div class="content">
+        <div class="content">
+            <div class="container">
+                <!-- <div class="card" id="card">
+                    <div class="slide slide1">
+                        <div class="content">
+                            <div class="titre">
+                                <p>Transport</p>
+                            </div>
+                            <div class="icon">
+                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide slide2">
+                        <div class="content">
+                            <p>- Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
+                            <p>- Elle fournit en temps réel, toutes les informations liées à leur trajet,
+                                correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants
+                                partenaires</p>
+                            <p>- Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- <div class="card" id="card">
+                    <div class="slide slide1">
+                        <div class="content">
+                            <div class="titre">
+                                <p>Hôtels & Casinos</p>
+                            </div>
+
+                            <div class="icon">
+                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide slide2">
+                        <div class="content">
+                            <p>- Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
+                            <p>- Elle guide les clients, répond à leurs questions, recommande les meilleures
+                                attractions, met en
+                                avant les événements spéciaux, et bien plus encore !</p>
+                            <p>- Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante,
+                                unique et
+                                mémorable !</p>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- <div class="card" id="card">
+                    <div class="slide slide1">
+                        <div class="content">
+                            <div class="titre">
+                                <p>Musées</p>
+                            </div>
+
+                            <div class="icon">
+                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide slide2">
+                        <div class="content">
+                            <p>- Mila enrichit l'expérience de visite dans les musées</p>
+                            <p>- Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en
+                                avant les
+                                expositions et événements, et bien plus encore !</p>
+                            <p>- Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante,
+                                unique et
+                                mémorable !</p>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- <div class="card" id="card">
+                    <div class="slide slide1">
+                        <div class="content">
+                            <div class="titre">
+                                <p>Galeries Marchandes</p>
+                            </div>
+
+                            <div class="icon">
+                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide slide2">
+                        <div class="content">
+                            <p>- Mila transforme l'expérience de visite dans vos centres commerciaux</p>
+                            <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs
+                                questions, leurs
+                                proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                            <p>- Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et
+                                renforcer
+                                leur fidélité</p>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- <div class="card" id="card">
+                    <div class="slide slide1">
+                        <div class="content">
+                            <div class="titre">
+                                <p>Points de vente</p>
+                            </div>
+
+                            <div class="icon">
+                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide slide2">
+                        <div class="content">
+                            <p>- Mila révolutionne l'expérience d’achat dans vos points de vente</p>
+                            <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs
+                                questions, leurs
+                                proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                            <p>- Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser
+                            </p>
+                        </div>
+                    </div>
+                </div> -->
+
+                <article class="card" id="card">
                     <div class="titre">
                         <p>Transport</p>
                     </div>
-
-                    <div class="icon">
-                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
-                        <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
+                    <div class="image">
+                        <video loop autoplay muted src="./assets/vid/illust.webm"></video>
                     </div>
-                </div>
-            </div>
-            <div class="slide slide2">
-                <div class="content">
-                    <p>- Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
-                    <p>- Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants partenaires</p>
-                    <p>- Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" id="card">
-            <div class="slide slide1">
-                <div class="content">
+                    <div class="desc">
+                        <p>Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
+                        <p>Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance,
+                            retard éventuel, offres promotionnelles des boutiques et restaurants partenaires</p>
+                        <p>Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
+                    </div>
+                </article>
+                <article class="card" id="card">
                     <div class="titre">
                         <p>Hôtels & Casinos</p>
                     </div>
-
-                    <div class="icon">
-                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                    <div class="image">
+                        <video loop autoplay muted src="./assets/vid/illust.webm"></video>
                     </div>
-                </div>
-            </div>
-            <div class="slide slide2">
-                <div class="content">
-                    <p>- Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
-                    <p>- Elle guide les clients, répond à leurs questions, recommande les meilleures attractions, met en
-                        avant les événements spéciaux, et bien plus encore !</p>
-                    <p>- Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique et
-                        mémorable !</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" id="card">
-            <div class="slide slide1">
-                <div class="content">
+                    <div class="desc">
+                        <p>Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
+                        <p>Elle guide les clients, répond à leurs questions, recommande les meilleures attractions, met
+                            en
+                            avant les événements spéciaux, et bien plus encore !</p>
+                        <p>Avec Mila, innovez dans l'accueil des visiteurs et offrez une expérience captivante, unique
+                            et
+                            mémorable !</p>
+                    </div>
+                </article>
+                <article class="card" id="card">
                     <div class="titre">
                         <p>Musées</p>
                     </div>
-
-                    <div class="icon">
-                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                    <div class="image"> <video loop autoplay muted src="./assets/vid/illust.webm"></video>
                     </div>
-                </div>
-            </div>
-            <div class="slide slide2">
-                <div class="content">
-                    <p>- Mila enrichit l'expérience de visite dans les musées</p>
-                    <p>- Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en avant les
-                        expositions et événements, et bien plus encore !</p>
-                    <p>- Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante, unique et
-                        mémorable !</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" id="card">
-            <div class="slide slide1">
-                <div class="content">
+                    <div class="desc">
+                        <p>Mila enrichit l'expérience de visite dans les musées</p>
+                        <p>Elle guide les visiteurs, répond à leurs questions, présente les œuvres d'art, met en avant
+                            les
+                            expositions et événements, et bien plus encore !</p>
+                        <p>Avec Mila, innovez dans l'accueil des visiteurs et proposez une expérience captivante, unique
+                            et
+                            mémorable !</p>
+                    </div>
+                </article>
+                <article class="card" id="card">
                     <div class="titre">
                         <p>Galeries Marchandes</p>
                     </div>
+                    <div class="image">
+                        <video loop autoplay muted src="./assets/vid/illust.webm"></video>
 
-                    <div class="icon">
-                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
                     </div>
-                </div>
-            </div>
-            <div class="slide slide2">
-                <div class="content">
-                    <p>- Mila transforme l'expérience de visite dans vos centres commerciaux</p>
-                    <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs
-                        proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
-                    <p>- Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et renforcer
-                        leur fidélité</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" id="card">
-            <div class="slide slide1">
-                <div class="content">
+                    <div class="desc">
+                        <p>Mila transforme l'expérience de visite dans vos centres commerciaux</p>
+                        <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions,
+                            leurs
+                            proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                        <p>Mila sera votre partenaire idéale pour améliorer la communication avec vos clients et
+                            renforcer
+                            leur fidélité</p>
+                    </div>
+                </article>
+                <article class="card" id="card">
                     <div class="titre">
                         <p>Points de vente</p>
                     </div>
+                    <div class="image">
+                        <video loop autoplay muted src="./assets/vid/illust.webm"></video>
 
-                    <div class="icon">
-                        <video autoplay loop muted src="./assets/vid/illust.webm"></video>
                     </div>
-                </div>
-            </div>
-            <div class="slide slide2">
-                <div class="content">
-                    <p>- Mila révolutionne l'expérience d’achat dans vos points de vente</p>
-                    <p>- Elle offre une assistance continue pour orienter les clients, répondre à leurs questions, leurs
-                        proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
-                    <p>- Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
-                </div>
+                    <div class="desc">
+                        <p>Mila révolutionne l'expérience d’achat dans vos points de vente</p>
+                        <p>Elle offre une assistance continue pour orienter les clients, répondre à leurs questions,
+                            leurs
+                            proposer des offres promotionnelles personnalisées, et bien plus encore !</p>
+                        <p>Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
+                    </div>
+                </article>
+
             </div>
         </div>
-    </div>
-</div>
 
 
     </section>
@@ -508,8 +595,6 @@
                 event.stopPropagation();
             });
         });
-
-
     </script>
 </body>
 
