--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -16,7 +16,7 @@
                 <span></span>
             </div>
             <div class="logo">
-                <a href="#home" class="js-scrollTo"><img src="./assets/img/logo_mila_1.svg"
+                <a href="#home" class="js-scrollTo"><img src="./assets/img/logo_mila2.png"
                         alt="Logo Mila"></a>
             </div>
             <div class="menu">
