--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -206,7 +206,7 @@
 
         <div class="content">
             <div class="container">
-                <!-- <div class="card" id="card">
+                 <div class="mycard" id="card">
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
@@ -226,8 +226,8 @@
                             <p>- Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="card" id="card">
+                </div>
+                <div class="mycard" id="card">
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
@@ -250,8 +250,8 @@
                                 mémorable !</p>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="card" id="card">
+                </div> 
+                 <div class="mycard" id="card">
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
@@ -274,8 +274,8 @@
                                 mémorable !</p>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="card" id="card">
+                </div> 
+                <div class="mycard" id="card">
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
@@ -298,8 +298,8 @@
                                 leur fidélité</p>
                         </div>
                     </div>
-                </div> -->
-                <!-- <div class="card" id="card">
+                </div>
+                <div class="mycard" id="card">
                     <div class="slide slide1">
                         <div class="content">
                             <div class="titre">
@@ -321,7 +321,7 @@
                             </p>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
                 <article class="card" id="card">
                     <div class="titre">
