--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -122,7 +122,7 @@
                     <p>adapté aux besoins</p>
                 </div>
                 <div>
-                    <p>de votre activitée</p>
+                    <p>de votre activité</p>
                 </div>
             </div>
             <div class="droite">
@@ -220,8 +220,7 @@
                     <div class="slide slide2">
                         <div class="content">
                             <p>- Mila améliore l’accueil des passagers et optimise leur expérience de voyage</p>
-                            <p>- Elle fournit en temps réel, toutes les informations liées à leur trajet,
-                                correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants
+                            <p>- Elle fournit en temps réel, toutes les informations liées à leur trajet, correspondance, retard éventuel, offres promotionnelles des boutiques et restaurants
                                 partenaires</p>
                             <p>- Mila sera votre aout incontournable pour renforcer la relation avec vos clients !</p>
                         </div>
