--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Mila - Assistante Virtuelle</title>
 </head>
 
 <body>
@@ -52,8 +52,8 @@
             <div class="right">
                 <H1>assistante virtuelle<br>mila</H1>
                 <p>Découvrez <span>Mila</span>, notre assistante virtuelle 3D <span>révolutionnaire</span>, animée par
-                    la technologie
-                    holographique</p>
+                    la <span>technologie
+                    holographique</span></p>
                 <a href="#innovation">Découvrir</a>
             </div>
         </div>
@@ -558,8 +558,15 @@
                 </div>
                 <input type="email" class="form-control" name="mail" id="mail" placeholder="Mail" required>
                 <button type="submit" class="custom-submit">Confirmer<i class="fas fa-envelope"></i></button>
-                <p>Suivez-nous<a href="#"><i class="fab fa-facebook-square"></i></a><a href="#"><i
-                            class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-linkedin"></i></a></p>
+                <div class="follow">
+                    <p>Suivez-nous</p>
+                    <div class="socials">
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                    </div>
+                </div>
+
             </div>
         </div>
         <div class="credit">
