--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -75,7 +75,7 @@
     <section class="innovation" id="innovation">
         <div class="container">
             <div class="content">
-                <div class="textleft" data-aos="fade-right" data-aos-delay="1200" data-aos-duration="1000">
+                <div class="textleft">
                     <p>Technologie innovante</p>
                 </div>
                 <div class="middle" data-aos="zoom-in" data-aos-duration="2000">
@@ -83,7 +83,7 @@
                     <p>au service</p>
                     <p>des usagers</p>
                 </div>
-                <div class="textright" data-aos="fade-left" data-aos-delay="1200" data-aos-duration="1000">
+                <div class="textright">
                     <p>Technologie innovante</p>
                 </div>
             </div>
@@ -469,7 +469,7 @@
         </div>
     </section>
 
-    <section class="video" data-aos="zoom-out-up" data-aos-duration="1200">
+    <section class="video">
         <div class="content">
             <div class="txt">
                 <svg width="30" height="75" viewBox="0 0 30 75" fill="none" xmlns="http://www.w3.org/2000/svg">
