--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -442,10 +442,10 @@
 
     <section class="custom" id="personnalisations">
         <div class="content">
-            <div class="gauche" data-aos="fade-right" data-aos-duration="1200">
+            <div class="gauche" data-aos="fade-up" data-aos-duration="1200">
                 <div><img src="./assets/img/mila_custom.png" alt=""></div>
             </div>
-            <div class="droite" data-aos="fade-left" data-aos-duration="1200">
+            <div class="droite" data-aos="fade-up" data-aos-duration="1200">
                 <div class="title">
                     <p>Personnalisations</p>
                 </div>
@@ -515,11 +515,11 @@
 
     <section class="demo" id="contact">
         <div class="content">
-            <div class="left" data-aos="fade-right" data-aos-duration="1200">
+            <div class="left" data-aos="fade-up" data-aos-duration="1200">
                 <div><img src="./assets/img/mila_demo.png" alt="">
                 </div>
             </div>
-            <div class="right" data-aos="fade-left" data-aos-duration="1200">
+            <div class="right" data-aos="fade-up" data-aos-duration="1200">
                 <div class="titre">
                     <p>Réservez une démo</p>
                     <p>Venez découvrir nos produits</p>
