--- a/mila_website/index.html
+++ b/mila_website/index.html
@@ -233,7 +233,7 @@
                             </div>
 
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                                <video autoplay loop muted src="./assets/vid/casino.webm"></video>
                             </div>
                         </div>
                     </div>
@@ -305,7 +305,7 @@
                             </div>
 
                             <div class="icon">
-                                <video autoplay loop muted src="./assets/vid/illust.webm"></video>
+                                <video autoplay loop muted src="./assets/vid/pdv.webm"></video>
                             </div>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                         <p>Hôtels & Casinos</p>
                     </div>
                     <div class="image">
-                        <video loop autoplay muted src="./assets/vid/illust.webm"></video>
+                        <video loop autoplay muted src="./assets/vid/casino.webm"></video>
                     </div>
                     <div class="desc">
                         <p>Mila réinvente l'expérience de séjour dans les hôtels et casinos</p>
@@ -391,8 +391,10 @@
                         <p>Points de vente</p>
                     </div>
                     <div class="image">
-                        <video loop autoplay muted src="./assets/vid/illust.webm"></video>
-
+                        <video loop autoplay muted playsinline>
+                            <source src="./assets/vid/pdv1.webm" type="video/webm">
+                            <img src="./assets/vid/pdv.gif" alt="mila points de vente">
+                        </video>
                     </div>
                     <div class="desc">
                         <p>Mila révolutionne l'expérience d’achat dans vos points de vente</p>
@@ -402,7 +404,6 @@
                         <p>Mila sera votre alliée pour enrichir la communication avec vos clients et les fidéliser</p>
                     </div>
                 </article>
-
             </div>
         </div>
 
